[Requires DB Migration]Tons of changes
 * Adds Artist and Album models/album.rb
 * Adds rails model associations
 * Adds new fields to song model including public_token
 * Modifies displayed songs based on authenticated user.rb
 * FINALLY adds ability for a user to upload a song
 * Makes songs playable through all the changes
 * Locks out /view and /play
 * Adds a user check, so logged in user can't consume media not owned by them
 * Adds paperclip requires 'bundle install'
 * Fixes some nil property errors
 * Cleans up DataAccess.rb

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,13 +1,7 @@
 ---
 development:
-  music_directory: c:\media\music
-  movie_directory: c:\media\movies
-  organize: true
+  media_directory: c:/MediaManager
 test:
-  music_directory: c:\Music
-  movie_directory: c:\Movies
-  organize: true
+  media_directory: c:/MediaManager
 production:
-  music_directory: c:\Music
-  movie_directory: c:\Movies
-  organize: true
+  media_directory: c:/MediaManager
